<resources>
    <string name="app_name">Bet On Black</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_main_id">ca-app-pub-6809424072521463/6204144813</string>
    <string name="banner_ad_unit_game_id">ca-app-pub-6809424072521463/9157611210</string>
    <string name="main_button">Create new Strategy</string>
    <string name="title_activity_new_strategy">NewStrategyActivity</string>
    <string name="newstrategy_strategyname">Name this strategy</string>

    <string-array name="strategy_array">
        <item>Martingale</item>
        <item>D\'Alembert</item>
        <item>Fibonacci</item>
    </string-array>
    <string name="newStrategy_choosestrategy">Choose Strategy</string>
    <string name="newstrategy_smallestbetallowed">Smallest bet allowed</string>
    <string name="newstrategy_biggestbetallowed">Biggest bet allowed</string>
    <string name="newstrategy_save">Save</string>
    <string name="newstrategy_cancel">Cancel</string>
    <string name="mainrecycler_min">Min Bet</string>
    <string name="mainrecycler_max">Max Bet</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="ellipses">.......................................................................................................................................................................................</string>
    <string name="game_set_betting_amount">Set Betting Amount</string>
    <string name="game_lost">Lost</string>
    <string name="game_button_set_starting_bet">Set Starting Bet</string>
    <string name="game_button_change_bet">Change Bet</string>
    <string name="game_won">Won</string>
    <string name="game_rounds">Rounds Before Failure</string>
    <string name="game_odds_label">Odds of Losing Within %d Rounds</string>
    <string name="game_min">Smallest Bet Allowed</string>
    <string name="game_max">Largest Bet Allowed</string>
    <string name="game_total_cash">Total Cash</string>
    <string name="game_total_profit">Total Profit Made</string>
    <string name="game_win_profit">Profit if Win</string>
    <string name="title_activity_main_tabbed">Bet On Black</string>

    <string name="content_description_image_history">Icon for history item.</string>
    <string name="start_cash_label">Start Cash</string>
    <string name="end_cash_label">End Cash</string>
    <string name="profit_label">Profit</string>
    <string name="loss_label">Loss</string>
    <string name="save">Save</string>
    <string name="new_history_name">Name this entry</string>
    <string name="game_gambling_money">Enter the amount of money you will gamble with.</string>
    <string name="game_set_cash">Set Cash</string>
    <string name="history_adapter_delete">Delete %s?</string>
    <string name="dollar_value">$%d</string>
    <string name="total_profit">Total Profit</string>
    <string name="total_loss">Total Loss</string>
    <string name="error_empty_number">Enter amount</string>
    <string name="error_min_bet">You need at least $%d to make a bet.</string>
    <string name="percent_value">%.2f%%</string>
    <string name="save_question">Save?</string>
    <string name="delete">Delete</string>
    <string name="no_save">Don\'t Save</string>
    <string name="dialog_save_back">Save this gambling data before going back?</string>
    <string name="error_max_less_min">Max bet must be higher than min bet.</string>
    <string name="drag_to_reorder">Drag to Reorder</string>
</resources>
