<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:padding="12dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_history_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_image_history"
            android:paddingLeft="0dp"
            android:paddingRight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_casino" />

        <TextView
            android:id="@+id/textView_history_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/imageView_history_manual"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView_history_startCashLabel"
            tools:text="Name"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/textView_history_startCashLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_cash_label"
            app:layout_constraintLeft_toRightOf="@id/textView_history_name"
            app:layout_constraintRight_toLeftOf="@+id/textView_history_endCashLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/textView_history_endCashLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_cash_label"
            app:layout_constraintLeft_toRightOf="@id/textView_history_startCashLabel"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_history_profitLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profit_label"
            app:layout_constraintLeft_toRightOf="@+id/textView_history_endCashLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_history_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/textView_history_profitLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView_history_name"
            tools:text="$200" />

        <TextView
            android:id="@+id/textView_history_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/textView_history_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_history_name"
            tools:text="Date" />

        <TextView
            android:id="@+id/textView_history_startCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/textView_history_startCashLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView_history_name"
            tools:text="$100" />

        <TextView
            android:id="@+id/textView_history_endCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/textView_history_endCashLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView_history_name"
            tools:text="$300" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.85"
            android:orientation="vertical"/>
    </android.support.constraint.ConstraintLayout>


</FrameLayout>
